objects/Mule_Lead_API_Query_Field__c.object
<CustomObject>
    <fields>
        <fullName>LeadFields__c</fullName>
        <label>LeadFields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WhereClause__c</fullName>
        <label>WhereClause</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Mule Lead API Query Field</label>
    <nameField>
        <displayFormat>MAPI-{0000}</displayFormat>
        <label>Mule Lead API Query Field Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mule Lead API Query Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>WhereClause__c</columns>
        <columns>LeadFields__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>